1. Navigation bar 2. Text Tabs (icon not show)

--- a/ShopNote/app/src/main/res/values/strings.xml
+++ b/ShopNote/app/src/main/res/values/strings.xml
@@ -4,18 +4,23 @@
     <string name="action_search">Search</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
-    <string name="nav_item_contact">Contac</string>
-    <string name="nav_item_name">Name</string>
-    <string name="nav_item_firstnote">My First Note</string>
+    <string name="nav_item_email_list">Email List</string>
+    <string name="nav_item_manage_sections">Manage Sections</string>
+    <string name="nav_item_organize_shopping">Organize Shopping</string>
+    <string name="nav_item_organize_favorites">Organize Favorites</string>
+    <string name="nav_item_first_note">My First Note</string>
 
     <!-- navigation drawer item labels  -->
     <string-array name="nav_drawer_labels">
-        <item>@string/nav_item_contact</item>
-        <item>@string/nav_item_name</item>
-        <item>@string/nav_item_firstnote</item>
+        <item>@string/nav_item_email_list</item>
+        <item>@string/nav_item_manage_sections</item>
+        <item>@string/nav_item_organize_shopping</item>
+        <item>@string/nav_item_organize_favorites</item>
+        <item>@string/nav_item_first_note</item>
     </string-array>
-
-    <string name="title_contact">Contac</string>
-    <string name="title_name">Name</string>
-    <string name="title_section">My First Note</string>
+    <string name="title_email_list">Email List</string>
+    <string name="title_manage_sections">Manage Sections</string>
+    <string name="title_organize_shopping">Organize Shopping</string>
+    <string name="title_organize_favorites">Organize Favorites</string>
+    <string name="title_first_note">My First Note</string>
 </resources>
